--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -59,19 +59,19 @@ and, perhaps less frequently used:
 
 .IP - 2
 .B play: 
-Wise plays scales, holes or licks, not asking you to play them back. All this makes sound.
+Wise plays scales, holes or licks, not asking you to play them back
 .IP -
 .B print:
-print and annottate the holes of scales or licks from the commandline. This refers to data, that already comes with harpwise.
+print and annotate the holes of scales or licks given on the commandline
 .IP -
 .B report: 
-Produce reports about licks and tags or a journal of licks played. This is information you have added to harpwise one way or the other.
+Produce reports about licks and tags or a journal of licks played
 .IP -
 .B tools: 
-Some simple, non-interactive tools related to basic harmonica theory. These tools mostly require arguments.
+Some simple, non-interactive tools related to basic harmonica theory		
 .IP -
 .B calibrate: 
-Wise generates samples for holes, or assists in recording your own.
+Wise generates samples for holes, or assists in recording your own
 .RE
 
 to read more details, usage examples and options for the individual
