--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -51,7 +51,12 @@ The wise listens to your playing, e.g. to monitor bends or scales
 Train your ear and musical memory
 .IP -
 .B licks: 
-Learn licks (only licks three included, but some pointers)
+Learn licks (only a few included, but some pointers)
+.IP -
+Three players for pitches, intervals and note progressions, that
+support practical music theory (mode play)
+.IP -
+An adjustable chart for keys and positions (mode tools)
 .RE
 
 and, perhaps less frequently used:
