--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -116,7 +116,7 @@ The possible scales depend on the chosen type of harmonica:
 
 scales for chromatic: all, blues, one, two
   scales for richter: all, blues, blues-middle, chord-i, chord-iv, chord-v, 
-    drawbends, major_pentatonic, mape, middle, minor_pentatonic, mixolydian, 
+    drawbends, major-pentatonic, mape, middle, minor-pentatonic, mixolydian, 
     root
   
 .SH "OPTIONS"
