hint on quick start

--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -150,6 +150,12 @@ https://github.com/marcIhm/harpwise/blob/main/README.org
 
 ~/.harpwise/config.ini
 
+.SH "QUICK START"
+
+harpwise listen c
+
+then blow your harp and come back later to learn about other modes.
+
 .SH EXAMPLES
 
 See the usage information of the individual modes.
