--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -95,7 +95,12 @@ key of harp, e.g. 'c' or 'g' or 'af' (a flat) or 'ds' (d sharp). If
 omitted, this defaults to 'c'.
 .IP -
 .B SCALE:
-scale on which you want to concentrate, e.g. 'blues', 'major_pentatonic' or 'all'. No default. As a special case and only for modes listen, quiz and licks you may give a set of holes (e.g. +1 +2 +3) as an adhoc scale.
+scale on which you want to concentrate, e.g. 'blues', 'major_pentatonic'
+or 'all'. No default. Note, that all scales are
+notated in second position (e.g. key of g for a c-harp); you may
+use the option --transpose-scale to change this. Finally, as a
+special case (and only for modes listen, quiz and licks) you may
+specify a set of holes (e.g. +1 +2 +3) as an adhoc scale.
 .RE
 
 An example using all these arguments would be:
@@ -103,25 +108,24 @@ An example using all these arguments would be:
 harpwise listen richter c blues
 .RE
 
-,which (relying on defaults), could also be written as:
+this does listen to your playing, while marking notes from the
+blues-scale.  And, relying on defaults, this could also be written as:
 .IP
 harpwise listen blues   
 .RE
 
-(listen to your playing, while marking notes from the blues-scale)
+This example would listen especially for the first three notes of the
+blues-scale, which are given as arguments as an adhoc scale
 
   harpwise listen -2 -3 +4
-
-(listen especially for the first three notes of the blues-scale, given
- as arguments as an adhoc scale)
 
 
 The possible scales depend on the chosen type of harmonica:
 
 scales for chromatic: all, blues, one, two
   scales for richter: all, blues, blues-middle, chord-i, chord-iv, chord-v, 
-    drawbends, major-pentatonic, mape, middle, minor-pentatonic, mixolydian, 
-    root
+    drawbends, major, major-pentatonic, mape, middle, minor-pentatonic, 
+    mixolydian, root
   
 .SH "OPTIONS"
 
