--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -123,7 +123,7 @@ blues-scale, which are given as arguments as an adhoc scale
 
 The possible scales depend on the chosen type of harmonica:
 
-scales for chromatic: all, blues, one, two
+scales for chromatic: all, blues, chord-i, chord-iv, chord-v, one, two
   scales for richter: all, blues, blues-middle, chord-i, chord-iv, chord-v, 
     drawbends, major, major-pentatonic, mape, middle, minor-pentatonic, mipe, 
     mixolydian, root
@@ -157,7 +157,17 @@ https://github.com/marcIhm/harpwise/blob/main/README.org
 
 .SH "QUICK START"
 
+Prepare your personal config with sound samples:
+
+.IP
+harpwise calibrate c --auto    
+.RE
+
+Feedback on what you are playing:
+
+.IP
 harpwise listen c
+.RE
 
 then blow your harp and come back later to learn about other modes.
 
