--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -96,12 +96,15 @@ omitted, this defaults to 'c'.
 scale on which you want to concentrate, e.g. 'blues', 'major_pentatonic'
 or 'all'. No default; cannot be abbreviated.
 
-Note, that all scales are notated in second position (e.g. key of g
+Note, that most scales are notated in second position (e.g. key of g
 for a c-harp); you may use the option --transpose-scale to change
 this.
 
 Finally, as a special case (and only for modes listen, quiz and licks)
 you may specify a set of holes (e.g. +1 +2 +3) as an adhoc scale.
+
+See the usage of mode 'listen' for an advanced example involving
+an adhoc scale and fourth position.
 .RE
 
 An example using all these arguments would be:
@@ -125,8 +128,8 @@ The possible scales depend on the chosen type of harmonica:
 
 scales for chromatic: all, blues, chord-i, chord-iv, chord-v, one, two
   scales for richter: all, blues, blues-middle, chord-i, chord-iv, chord-v, 
-    drawbends, major, major-pentatonic, mape, middle, minor-pentatonic, mipe, 
-    mixolydian, root
+    drawbends, major, major-pentatonic, mape, middle, minor, minor-pentatonic, 
+    mipe, mixolydian, root
   
 .SH "OPTIONS"
 
