--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -127,7 +127,7 @@ blues-scale, which are given as arguments as an adhoc scale
 The possible scales depend on the chosen type of harmonica:
 
 scales for chromatic: all, blues, chord-i, chord-iv, chord-v, one, two
-  scales for richter: all, blues, blues-middle, chord-i, chord-iv, chord-v, 
+  scales for richter: all, arabic, blues, blues-middle, chord-i, chord-iv, chord-v, 
     drawbends, major, major-pentatonic, mape, middle, minor, minor-pentatonic, 
     mipe, mixolydian, root
   
