--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -128,8 +128,8 @@ The possible scales depend on the chosen type of harmonica:
 
 scales for chromatic: all, blues, chord-i, chord-iv, chord-v, one, two
   scales for richter: all, arabic, blues, blues-middle, chord-i, chord-iv, chord-v, 
-    drawbends, major, major-pentatonic, mape, middle, minor, minor-pentatonic, 
-    mipe, mixolydian, root
+    drawbends, major, major-pentatonic, mape, mape4, mape5, middle, minor, 
+    minor-pentatonic, mipe, mixolydian, root
   
 .SH "OPTIONS"
 
