--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -147,7 +147,9 @@ help on this.
 .SH "SUGGESTED READING"
 
 .IP - 2
-Usage information for the individual modes
+Usage information for the individual modes, e.g.
+.br
+harpwise listen
 .IP -
 The toplevel file README.org, also available at:
 
