revert renaming of quiz to recall; i.e. now it is quiz again

--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -50,7 +50,7 @@ The wise listens to your playing, e.g. to monitor bends or scales
 .B licks: 
 Learn licks (only a few included, but pointers to find more)
 .IP -
-.B recall: 
+.B quiz: 
 Train your ear and musical memory
 .RE
 
@@ -100,7 +100,7 @@ Note, that most scales are notated in second position (e.g. key of g
 for a c-harp); you may use the option --transpose-scale to change
 this.
 
-Finally, as a special case (and only for modes listen, licks and recall)
+Finally, as a special case (and only for modes listen, quiz and licks)
 you may specify a set of holes (e.g. +1 +2 +3) as an adhoc scale.
 
 See the usage of mode 'listen' for an advanced example involving
