--- a/man/harpwise.1
+++ b/man/harpwise.1
@@ -51,7 +51,7 @@ The wise listens to your playing, e.g. to monitor bends or scales
 Learn licks (only a few included, but pointers to find more)
 .IP -
 .B quiz: 
-Train your ear and musical memory
+Train your ear, memory and knowledge of music theory
 .RE
 
 And with a less interactive interface and not using your microphone:
