better installation instructions

--- a/README.org
+++ b/README.org
@@ -84,6 +84,41 @@
   new licks and some pointers to sources for more (printed and online,
   payed and free).
 
+* Installation
+
+  Please see the README within subdirectory install.
+   
+* Invocation
+
+  On the commandline.
+
+  If you have downloaded from github
+
+  cd ~/harpwise
+  ./harpwise
+
+  or if you installed harpwise from the ubuntu repositories, just type:
+
+  harpwise
+
+  In any case you will get usage information to get you started quickly.
+  
+* Configuration
+
+  This is the user-modifyable configuration file, that will be create on
+  first invocation:
+
+  ~/.harpwise/config.ini
+
+  There you may override many settings from the programs default config
+  The file is commented extensively so please read there for details on
+  the various settings. Initially this config-file is a copy of the
+  programs central config-file.
+
+  See also the usage-information, which lists all of the commandline
+  option, which (in many cases) mirror the settings from your config.ini.
+
+
 * Some concepts
 ** Scales and Licks
 
@@ -225,40 +260,4 @@
     It show the interval to the reference hole (if one has been set) or
     the interval the the previously played hole.
 
-* Configuration
-
-  This is the user-modifyable configuration file, that will be create on
-  first invocation:
-
-  ~/.harpwise/config.ini
-
-  There you may override many settings from the programs default config
-  The file is commented extensively so please read there for details on
-  the various settings. Initially this config-file is a copy of the
-  programs central config-file.
-
-  See also the usage-information, which lists all of the commandline
-  option, which (in many cases) mirror the settings from your config.ini.
-
-* Installation
-
-  From 2023-04 on, harpwise can be found in the ubuntu repositories:
-
-  apt install harpwise
-
-  You need to read on, only if you want to install the latest version
-  directly from its repo.
   
-  The program harpwise runs in the linux console, so no graphical
-  environment is needed. Harpwise is written in ruby (no extra gems) and
-  it runs directly from within the directory, which you need to clone from
-  github first. Vice versa it can simply be removed by deleting the cloned
-  directory.
-
-  harpwise has some dependencies (ruby, aubio, sox, etc.) and one of the
-  scripts in directory install may be used to install them.
-
-  For MS Windows, version 11, you may use the latest windows-Subsystem for
-  Linux wsl2, which supports sound through the remote desktop protocol.
-
-  See README.org in directory install for more details.
